- Fix linking problem to toc and title-page introduced in previous commit.
* stylesheets/yelp-customization.xsl:
- Fix linking problem to toc and title-page introduced
  in previous commit.

--- a/stylesheets/ChangeLog
+++ b/stylesheets/ChangeLog
@@ -1,6 +1,12 @@
 2003-07-20  Shaun McCance  <shaunm@wolfram.com>
 
 	* yelp-customization.xsl:
+	- Fix linking problem to toc and title-page introduced
+	  in previous commit.
+
+2003-07-20  Shaun McCance  <shaunm@wolfram.com>
+
+	* yelp-customization.xsl:
 	- Remove unused params.
 	- Change toc and title-page filenames on file chunking to be
 	  the same as the current GDP stylesheets.
