- Revert current to 1.48 until I can investigate more thoroughly. - Put in
* stylesheets/yelp-customization.xsl:
- Revert current to 1.48 until I can investigate more thoroughly.
- Put in compatibility with old param names until I can get the
  changes pushed through in C.

--- a/stylesheets/ChangeLog
+++ b/stylesheets/ChangeLog
@@ -1,3 +1,10 @@
+2003-07-21  Shaun McCance  <shaunm@wolfram.com>
+
+	* yelp-customization.xsl:
+	- Revert current to 1.48 until I can investigate more thoroughly.
+	- Put in compatibility with old param names until I can get the
+	  changes pushed through in C.
+
 2003-07-20  Shaun McCance  <shaunm@wolfram.com>
 
 	* yelp-customization.xsl:
