--- a/stylesheets/ChangeLog
+++ b/stylesheets/ChangeLog
@@ -1,6 +1,12 @@
 2003-07-21  Shaun McCance  <shaunm@wolfram.com>
 
 	* yelp-customization.xsl:
+	* yelp-functions.xsl:
+	- Fix dumb bug where singleton subsections didn't get processed.
+
+2003-07-21  Shaun McCance  <shaunm@wolfram.com>
+
+	* yelp-customization.xsl:
 	- Revert current to 1.48 until I can investigate more thoroughly.
 	- Put in compatibility with old param names until I can get the
 	  changes pushed through in C.
