- Change parameters passed to stylesheets.
* src/yelp-db2html.c:
- Change parameters passed to stylesheets.

* stylesheets/yelp-customization.xsl:
- Remove compatibility with old param names.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-07-24  Shaun McCance  <shaunm@wolfram.com>
+
+	* src/yelp-db2html.c:
+	- Change parameters passed to stylesheets.
+
 2003-07-15 John Fleck <jfleck@inkstain.net>
 
 	* configure.in: version 2.3.4
