--- a/stylesheets/ChangeLog
+++ b/stylesheets/ChangeLog
@@ -1,3 +1,8 @@
+2003-07-24  Shaun McCance  <shaunm@wolfram.com>
+
+	* yelp-customization.xsl:
+	- Remove compatibility with old param names.
+
 2003-07-21  Shaun McCance  <shaunm@wolfram.com>
 
 	* yelp-customization.xsl:
