--- a/po/ml.po
+++ b/po/ml.po
@@ -1,18 +1,20 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# translation of yelp.HEAD.ml.po to Malayalam
 # This file is distributed under the same license as the PACKAGE package.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # FSF-India <locale@gnu.org.in>, 2003.
+# Suresh VP <mvpsuresh@yahoo.com>, 2003
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: yelp 2.2.x\n"
-"POT-Creation-Date: 2003-06-04 11:54+0200\n"
-"PO-Revision-Date: 2003-03-05 10:29+0530\n"
-"Last-Translator: FSF-India <locale@gnu.org.in>\n"
+"Project-Id-Version: yelp.HEAD.ml\n"
+"POT-Creation-Date: 2003-06-06 05:05+0200\n"
+"PO-Revision-Date: 2003-06-12 17:52-0600\n"
+"Last-Translator: Suresh VP <mvpsuresh@yahoo.com>\n"
 "Language-Team: Malayalam <locale@gnu.org.in>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.0\n"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -55,8 +57,9 @@ msgid "Yelp Factory"
 msgstr "സഹായ ശാല"
 
 #: src/yelp-main.c:94
+#, fuzzy
 msgid "Define which cache dir to use"
-msgstr ""
+msgstr "ഏതു cache dir ഉപയേഗിക്കണം"
 
 #: src/yelp-main.c:128
 #, c-format
@@ -263,7 +266,7 @@ msgstr "എഫ്.എസ്.എഫ് - ഇന്ത്യ <gnu@gnu.org.in>"
 #: src/yelp-window.c:681
 #, fuzzy
 msgid "A Help Browser for GNOME"
-msgstr "GNOME 2 "
+msgstr "ഒരു GNOME സഹായന്വേഷണ ഉപകരണം്"
 
 #: src/yelp-window.c:795
 msgid "Back"
@@ -304,3 +307,4 @@ msgstr "ഗ്നോം സഹായം ലഭിക്കുക"
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "സഹായം"
+
