--- a/stylesheets/ChangeLog
+++ b/stylesheets/ChangeLog
@@ -1,3 +1,9 @@
+2003-07-29  Shaun McCance  <shaunm@wolfram.com>
+
+	* yelp-functions.xsl:
+	- Abilitity to get title from refmeta/refentrytitle.  Probably
+	  a few more things along this line are needed.
+
 2003-07-24  Shaun McCance  <shaunm@wolfram.com>
 
 	* yelp-customization.xsl:
