src/info2html/html.c patch from Shaun re bug #89838
2003-07-30 John Fleck <jfleck@inkstain.net>

	* src/info2html/html.c
	patch from Shaun re bug #89838

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-07-30 John Fleck <jfleck@inkstain.net>
+
+	* src/info2html/html.c
+	patch from Shaun re bug #89838
+
 2003-07-24  Shaun McCance  <shaunm@wolfram.com>
 
 	* src/yelp-db2html.c:
