- Fix for the thing where parts got two TOCs.
* stylesheets/yelp-customization.xsl:
- Fix for the thing where parts got two TOCs.

--- a/stylesheets/ChangeLog
+++ b/stylesheets/ChangeLog
@@ -1,3 +1,8 @@
+2003-07-31  Shaun McCance  <shaunm@wolfram.com>
+
+	* yelp-customization.xsl:
+	- Fix for the thing where parts got two TOCs.
+
 2003-07-29  Shaun McCance  <shaunm@wolfram.com>
 
 	* yelp-functions.xsl:
