--- a/po/hi.po
+++ b/po/hi.po
@@ -4,8 +4,8 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Yelp 2.0 \n"
-"POT-Creation-Date: 2003-06-04 11:54+0200\n"
+"Project-Id-Version: Yelp 2.4 \n"
+"POT-Creation-Date: 2003-08-05 19:19+0530\n"
 "PO-Revision-Date: 2003-01-10 20:38+0530\n"
 "Last-Translator: Bhopal team <anuragseetha@yahoo.com>\n"
 "Language-Team: Gnome Hindi Team <indlinux-hindi-gnome@lists.sourceforge."
@@ -13,6 +13,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Report-Msgid-Bugs-To: \n"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -55,8 +56,8 @@ msgid "Yelp Factory"
 msgstr "यल्प कारखाना"
 
 #: src/yelp-main.c:94
-msgid "Define which cache dir to use"
-msgstr ""
+msgid "Define which cache directory to use"
+msgstr "कैश के लिए प्रयुक्त डॉयरेक्ट्री "
 
 #: src/yelp-main.c:128
 #, c-format
@@ -261,9 +262,8 @@ msgid "translator_credits"
 msgstr "अनुवादकों को श्रेय  (_c)"
 
 #: src/yelp-window.c:681
-#, fuzzy
 msgid "A Help Browser for GNOME"
-msgstr "गनोम 2.0 के लिए ब्राउजर सहायता"
+msgstr "गनोम के लिए सहायता ब्राउजर"
 
 #: src/yelp-window.c:795
 msgid "Back"
