Updated Ukrainian translations

--- a/po/uk.po
+++ b/po/uk.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
-"POT-Creation-Date: 2003-06-04 11:54+0200\n"
+"POT-Creation-Date: 2003-08-06 10:32+0300\n"
 "PO-Revision-Date: 2003-04-08 07:25--500\n"
 "Last-Translator: Yuriy Syrota <yuri@renome.rovno.ua>\n"
 "Language-Team: Ukrainian <uk@li.org>\n"
@@ -54,8 +54,8 @@ msgid "Yelp Factory"
 msgstr "Фабрика Yelp"
 
 #: src/yelp-main.c:94
-msgid "Define which cache dir to use"
-msgstr "Встановити каталог кешу"
+msgid "Define which cache directory to use"
+msgstr "Встановити каталог для кешу"
 
 #: src/yelp-main.c:128
 #, c-format
@@ -190,7 +190,7 @@ msgstr "Вільне програмне забезпечення"
 
 #: src/yelp-view-toc.c:714
 msgid "(C)"
-msgstr "(C)"
+msgstr "©"
 
 #: src/yelp-window.c:163
 msgid "/_File"
@@ -260,9 +260,8 @@ msgid "translator_credits"
 msgstr "Юрій Сирота <yuriy@beer.com>"
 
 #: src/yelp-window.c:681
-#, fuzzy
 msgid "A Help Browser for GNOME"
-msgstr "Перегляд довідки для GNOME 2.0"
+msgstr "Перегляд довідки для GNOME"
 
 #: src/yelp-window.c:795
 msgid "Back"
