*** empty log message ***

--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -6,8 +6,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
-"POT-Creation-Date: 2003-06-04 11:54+0200\n"
-"PO-Revision-Date: 2003-01-22 22:01+0800\n"
+"POT-Creation-Date: 2003-08-07 00:05+0800\n"
+"PO-Revision-Date: 2003-08-03 23:25+0800\n"
 "Last-Translator: Funda Wang <fundawang@en2china.com>\n"
 "Language-Team: zh_CN <i18n-translation@lists.linux.net.cn>\n"
 "MIME-Version: 1.0\n"
@@ -55,8 +55,8 @@ msgid "Yelp Factory"
 msgstr "Yelp 工厂"
 
 #: src/yelp-main.c:94
-msgid "Define which cache dir to use"
-msgstr ""
+msgid "Define which cache directory to use"
+msgstr "定义要使用哪个缓存目录"
 
 #: src/yelp-main.c:128
 #, c-format
@@ -134,7 +134,7 @@ msgstr "简介"
 
 #: src/yelp-man.c:459
 msgid "System Administration"
-msgstr "系统管理员"
+msgstr "系统管理"
 
 #: src/yelp-view-content.c:487 src/yelp-view-index.c:423
 msgid "Loading..."
@@ -263,9 +263,8 @@ msgstr ""
 "Funda Wang <fundawang@en2china.com>, 2003"
 
 #: src/yelp-window.c:681
-#, fuzzy
 msgid "A Help Browser for GNOME"
-msgstr "GNOME 2.0 的帮助浏览器"
+msgstr "GNOME 的帮助浏览器"
 
 #: src/yelp-window.c:795
 msgid "Back"
