--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2003-08-06  Wang Jian  <lark@linux.net.cn>
+
+	* zh_CN.po: Updated Simplified Chinese translation by
+	Funda Wang <fundawang@linux.net.cn>.
+
 2003-08-05  Guntupalli Karunakar  <karunakar@freedomink.org>
 
 	* hi.po: Updated Hindi translation.
