--- a/po/es.po
+++ b/po/es.po
@@ -6,14 +6,15 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp.HEAD\n"
-"POT-Creation-Date: 2003-06-04 11:54+0200\n"
-"PO-Revision-Date: 2003-06-06 16:20+0200\n"
-"Last-Translator: Juan Manuel García Molina <juanma_gm@wanadoo.es>\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2003-08-07 12:57+0200\n"
+"PO-Revision-Date: 2003-08-07 09:53-0300\n"
+"Last-Translator: Pablo G. del Campo <pablodc@bigfoot.com>\n"
 "Language-Team: Spanish <traductores@es.gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.0.1\n"
+"X-Generator: KBabel 1.0\n"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -56,8 +57,8 @@ msgid "Yelp Factory"
 msgstr "Fábrica Yelp"
 
 #: src/yelp-main.c:94
-msgid "Define which cache dir to use"
-msgstr "Defina qué dir de caché usar"
+msgid "Define which cache directory to use"
+msgstr "Define que directorio de cache utilizar"
 
 #: src/yelp-main.c:128
 #, c-format
