Updated Serbian translation.
2003-08-08  Danilo Šegan  <dsegan@gmx.net>

	* sr.po, sr@Latn.po: Updated Serbian translation.

--- a/po/sr@Latn.po
+++ b/po/sr@Latn.po
@@ -8,8 +8,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp 2.2\n"
-"POT-Creation-Date: 2003-06-04 11:54+0200\n"
-"PO-Revision-Date: 2003-04-09 12:52+0100\n"
+"POT-Creation-Date: 2003-08-08 04:54+0200\n"
+"PO-Revision-Date: 2003-08-08 04:54+0200\n"
 "Last-Translator: Goran Rakić <gox@devbase.net>\n"
 "Language-Team: Serbian (sr) <serbiangnome-lista@nongnu.org>\n"
 "MIME-Version: 1.0\n"
@@ -57,8 +57,8 @@ msgid "Yelp Factory"
 msgstr "Jelp fabrika"
 
 #: src/yelp-main.c:94
-msgid "Define which cache dir to use"
-msgstr ""
+msgid "Define which cache directory to use"
+msgstr "Definiši koji direktorijum da koristi za privremeni smeštaj"
 
 #: src/yelp-main.c:128
 #, c-format
@@ -267,9 +267,8 @@ msgstr ""
 "http://www.prevod.org"
 
 #: src/yelp-window.c:681
-#, fuzzy
 msgid "A Help Browser for GNOME"
-msgstr "Preglednik pomoći za Gnom 2.0"
+msgstr "Preglednik pomoći za Gnom"
 
 #: src/yelp-window.c:795
 msgid "Back"
