Updated for 2.3.6 Bumped to 2.3.6
2003-08-12  Mikael Hallendal  <micke@imendio.com>

	* NEWS: Updated for 2.3.6
	* configure.in: Bumped to 2.3.6

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2003-08-12  Mikael Hallendal  <micke@imendio.com>
 
+	* NEWS: Updated for 2.3.6
+	* configure.in: Bumped to 2.3.6
+
 	* data/images/bcg.png: 
 	- Replace image for one with transparent background.
 	* src/yelp-view-toc.c: 
@@ -9,7 +12,7 @@
 2003-07-30 John Fleck <jfleck@inkstain.net>
 
 	* src/info2html/html.c
-	patch from Shaun re bug #89838
+	- patch from Shaun re bug #89838
 
 2003-07-24  Shaun McCance  <shaunm@wolfram.com>
 
