--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,12 @@
+Changes in 2.3.6:
+-----------------
+* A11y fixes to the contents view, #89838       (Shaun McCance)
+* A11y fixes to info viewing, #89838            (Shaun McCance)
+* Updated translations
+  (pt, ja, hi, zh_CN, es and sr)
+
 Changes in 2.3.4:
 -----------------
-
 * move man and info help converters into Yelp	(Anders Carlsson
 * add StarupNotify support			(Jordi Mallach)
 * additional language support for stylesheets	(Glynn foster, Mike Lei)
