--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2003-08-12  Mikael Hallendal  <micke@imendio.com>
 
+        * Release 2.3.6
+
 	* NEWS: Updated for 2.3.6
 	* configure.in: Bumped to 2.3.6
 
