--- a/stylesheets/ChangeLog
+++ b/stylesheets/ChangeLog
@@ -1,3 +1,8 @@
+2003-08-12  Shaun McCance  <shaunm@wolfram.com>
+
+	* yelp-functions.xsl:
+	- Fixed stupid bad syntax in yelp:get-admon.class
+
 2003-07-31  Shaun McCance  <shaunm@wolfram.com>
 
 	* yelp-customization.xsl:
