src/yelp-view-toc.c - Re-added a closing ul tag that was accidentally
* src/yelp-view-toc.c
- Re-added a closing ul tag that was accidentally removed

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-08-13  Shaun McCance  <shaunm@wolfram.com>
+
+	* src/yelp-view-toc.c
+	- Re-added a closing ul tag that was accidentally removed
+
 2003-08-12  Mikael Hallendal  <micke@imendio.com>
 
         * Release 2.3.6
