Added "ne" to ALL_LINGUAS. Added Nepali translation by Pawan Chitrakar
2003-08-14  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "ne" to ALL_LINGUAS.
	* po/ne.po: Added Nepali translation by
	Pawan Chitrakar <pawan@nplinux.org>.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-08-14  Christian Rose  <menthos@menthos.com>
+
+	* configure.in: Added "ne" to ALL_LINGUAS.
+
 2003-08-13  Shaun McCance  <shaunm@wolfram.com>
 
 	* src/yelp-view-toc.c
