--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2003-08-14  Christian Rose  <menthos@menthos.com>
+
+	* ne.po: Added Nepali translation by
+	Pawan Chitrakar <pawan@nplinux.org>.
+
 2003-08-12  Pauli Virtanen  <pauli.virtanen@hut.fi>
 
 	* fi.po: Updated Finnish translation from Lauri Nurmi.
