provide nicer, gnome2-styled images
2003-08-18  Jakub Steiner <jimmac@ximian.com>

* stylesheets/docbook/*.png: provide nicer, gnome2-styled images

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-08-18  Jakub Steiner <jimmac@ximian.com>
+
+	* stylesheets/docbook/*.png: provide nicer, gnome2-styled images
+
 2003-08-15  Mikael Hallendal  <micke@imendio.com>
 
         * src/GNOME_Yelp.server.in: Replaced yelp-base for yelp. Not sure what
