--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-08-18  Shaun McCance  <shaunm@wolfram.com>
+
+	* src/yelp-window.c: declare variables at top of block
+
 2003-08-18  Jakub Steiner <jimmac@ximian.com>
 
 	* stylesheets/docbook/*.png: provide nicer, gnome2-styled images
