--- a/po/be.po
+++ b/po/be.po
@@ -1,20 +1,20 @@
 # translation of yelp.HEAD.be.po to Belarusian
-# translation of yelp.HEAD.be.po to belarusian
-# translation of yelp.
 # Copyright (C) 2002,2003 Free Software Foundation, Inc.
+# Ales Nyakhaychyk <nab@mail.by>, 2003
 # Vital Khilko <dojlid@mova.org>, 2003
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp.HEAD.be\n"
-"POT-Creation-Date: 2003-06-04 11:54+0200\n"
-"PO-Revision-Date: 2003-05-19 15:45+0300\n"
-"Last-Translator: Vital Khilko <dojlid@mova.org>\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2003-08-12 05:09+0200\n"
+"PO-Revision-Date: 2003-08-12 09:32+0300\n"
+"Last-Translator: Ales Nyakhaychyk <nab@mail.by>\n"
 "Language-Team: Belarusian <i18n@mova.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.0\n"
+"X-Generator: KBabel 0.9.6\n"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -54,11 +54,11 @@ msgstr "Yelp"
 
 #: src/GNOME_Yelp.server.in.h:2
 msgid "Yelp Factory"
-msgstr "Фабрыка Yelp"
+msgstr "Вытворчасьць Yelp"
 
 #: src/yelp-main.c:94
-msgid "Define which cache dir to use"
-msgstr "Вызначэньне тэчкі кэшу для выкарыстаньня"
+msgid "Define which cache directory to use"
+msgstr "Вызначае якую тэчку кэшу выкарыстоўваць"
 
 #: src/yelp-main.c:128
 #, c-format
@@ -241,11 +241,11 @@ msgstr "/Пераход/Да _зьместа"
 
 #: src/yelp-window.c:177
 msgid "/_Help"
-msgstr "/_Дапамога"
+msgstr "/_Даведка"
 
 #: src/yelp-window.c:178
 msgid "/Help/_About"
-msgstr "/Дапамога/_Пра праграму"
+msgstr "/Даведка/_Пра праграму"
 
 #: src/yelp-window.c:238 src/yelp-window.c:438
 msgid "Help Browser"
@@ -260,7 +260,9 @@ msgstr "Дакумэнт \"%s\" ня існуе"
 #. * will shop up in the "about" box
 #: src/yelp-window.c:677
 msgid "translator_credits"
-msgstr "Belarusian Language Linux Team <i18n@mova.org>"
+msgstr ""
+"Алесь НЯХАЙЧЫК <nab@mail.by>\n"
+"Віталь ХІЛЬКО <dojlid@mova.org>, 2003"
 
 #: src/yelp-window.c:681
 msgid "A Help Browser for GNOME"
@@ -300,8 +302,9 @@ msgstr "Адшукаць у зьмесьце"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
-msgstr "Атрымаць дапамогу ў асяродьдзі GNOME"
+msgstr "Атрымаць даведку ў асяродьдзі GNOME"
 
 #: yelp.desktop.in.h:2
 msgid "Help"
-msgstr "Дапамога"
+msgstr "Даведка"
+
