--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-08-18  Abel Cheung  <maddog@linux.org.hk>
+
+	* zh_TW.po: Updated traditional Chinese translation.
+
 2003-08-18  Danilo Šegan  <dsegan@gmx.net>
 
 	* be.po: Updated Belarusian translation by Ales Nyakhaychyk
