Updated Slovenian translation

--- a/po/sl.po
+++ b/po/sl.po
@@ -243,7 +243,7 @@ msgstr "/_Pomoč"
 
 #: src/yelp-window.c:186
 msgid "/Help/_About"
-msgstr "/pomoč/_O programu"
+msgstr "/Pomoč/_O programu"
 
 #: src/yelp-window.c:255 src/yelp-window.c:455
 msgid "Help Browser"
@@ -258,7 +258,7 @@ msgstr "Dokument '%s' ne obstaja"
 #. * will shop up in the "about" box
 #: src/yelp-window.c:694
 msgid "translator_credits"
-msgstr "Andraž Tori <andraz.tori1@guest.arnes.si>"
+msgstr "Andraž Tori <andraz.tori1@guest.arnes.si>\nTilen Travnik <tilen.travnik@guest.arnes.si>"
 
 #: src/yelp-window.c:698
 msgid "A Help Browser for GNOME"
