--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-08-24  Sanlig Badral  <badral@openmn.org>
+
+	* mn.po: Updated Mongolian translation.
+
 2003-08-24  Changwoo Ryu  <cwryu@debian.org>
 
 	* ko.po: Updated Korean translation.
