Updated README so it's correct
* README: Updated README so it's correct

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-08-26  Shaun McCance  <shaunm@wolfram.com>
+
+	* README: Updated README so it's correct
+
 2003-08-18  Shaun McCance  <shaunm@wolfram.com>
 
 	* src/yelp-window.c: declare variables at top of block
