Updated Catalan translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-08-27  Jordi Mallach  <jordi@sindominio.net>
+
+	* ca.po: Updated Catalan translation.
+
 2003-08-27  Metin Amiroff <metin@karegen.com>
 
 	* az.po: Updated Azerbaijani translation.
