--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-08-27  Jordi Mallach  <jordi@sindominio.net>
+
+	* ca.po: Add missing accelerator.
+
 2003-08-24  Sanlig Badral  <badral@openmn.org>
 
 	* mn.po: Updated Mongolian translation.
