src/yelp-main.c - Fix from alexl for rather nasty problem when DISPLAY is
* src/yelp-main.c
- Fix from alexl for rather nasty problem when DISPLAY is set.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-08-27  Shaun McCance  <shaunm@wolfram.com>
+
+	* src/yelp-main.c
+	- Fix from alexl for rather nasty problem when DISPLAY is set.
+
 2003-08-26  Shaun McCance  <shaunm@wolfram.com>
 
 	* src/yelp-cache.c
