--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-08-29  Alessio Frusciante  <algol@firenze.linux.it>
+
+	* it.po: Updated Italian translation.
+
 2003-08-27  Jordi Mallach  <jordi@sindominio.net>
 
 	* ca.po: Add missing accelerator.
