--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -6,9 +6,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp 2.3.6\n"
-"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=l10n\n"
-"POT-Creation-Date: 2003-08-19 07:12+0800\n"
-"PO-Revision-Date: 2003-08-19 07:17+0800\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2003-08-29 20:16+0800\n"
+"PO-Revision-Date: 2003-08-29 20:17+0800\n"
 "Last-Translator: Abel Cheung <maddog@linux.org.hk>\n"
 "Language-Team: Chinese (traditional) <zh-l10n@linux.org.tw>\n"
 "MIME-Version: 1.0\n"
@@ -137,11 +137,27 @@ msgstr "概覽"
 msgid "System Administration"
 msgstr "系統管理"
 
-#: src/yelp-view-content.c:487 src/yelp-view-index.c:423
+#: src/yelp-scrollkeeper.c:627
+msgid "About This Document"
+msgstr "關於這份文件"
+
+#: src/yelp-scrollkeeper.c:631
+msgid "Contents"
+msgstr "內容"
+
+#: src/yelp-view-content.c:489
+msgid "Previous"
+msgstr "上一頁"
+
+#: src/yelp-view-content.c:500
+msgid "Next"
+msgstr "下一頁"
+
+#: src/yelp-view-content.c:589 src/yelp-view-index.c:423
 msgid "Loading..."
 msgstr "載入..."
 
-#: src/yelp-view-content.c:528 src/yelp-view-index.c:517
+#: src/yelp-view-content.c:630 src/yelp-view-index.c:517
 msgid "Section"
 msgstr "章節"
 
