- Fixed bad anchor tag on certain headers.
* yelp-customization.xsl:
- Fixed bad anchor tag on certain headers.

--- a/stylesheets/ChangeLog
+++ b/stylesheets/ChangeLog
@@ -1,3 +1,8 @@
+2003-08-31  Shaun McCance  <shaunm@wolfram.com>
+
+	* yelp-customization.xsl:
+	- Fixed bad anchor tag on certain headers.
+
 2003-08-12  Shaun McCance  <shaunm@wolfram.com>
 
 	* yelp-functions.xsl:
