--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-09-01  Shaun McCance  <shaunm@wolfram.com>
+
+	* configure.in: Version 2.3.90
+
 2003-08-26  Shaun McCance  <shaunm@wolfram.com>
 
 	* README: Updated README so it's correct
