--- a/po/ne.po
+++ b/po/ne.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: GNOME 2.0\n"
-"POT-Creation-Date: 2003-01-20 21:54+0100\n"
+"POT-Creation-Date: 2003-09-01 16:45-0500\n"
 "PO-Revision-Date: 2003-07-1 23:18GMT\n"
 "Last-Translator: Pawan Chitrakar <pawan@nplinux.org>\n"
 "Language-Team:  Nepali <info@mpp.org.np>\n"
@@ -10,214 +10,295 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 0.9.5\n"
 
-msgid "(C)"
-msgstr "©"
-
+#: data/ui/yelp.glade.h:1
 msgid "*"
 msgstr "*"
 
-msgid "/Edit/_Find again"
-msgstr "/संसोधन/फेरि खोजनुस"
-
-msgid "/Edit/_Find in page..."
-msgstr "/संसोधन/पृष्ठमा  खोजनुस"
-
-msgid "/File/_Close window"
-msgstr "/फाईल/ Window बन्द गर्नुस "
-
-msgid "/File/_New window"
-msgstr "/फाईल/ नयां Window "
-
-msgid "/Go/_Back"
-msgstr "/जाउ/पहिल्लो"
-
-msgid "/Go/_Forward"
-msgstr "/जाउ/अगाडि"
-
-msgid "/Go/_Home"
-msgstr "/जाउ/मुख्य पृष्ठ"
-
-msgid "/Go/_Index"
-msgstr "/जाउ/Index"
-
-msgid "/Help/_About"
-msgstr "/सहायता/बारेमा..."
-
-msgid "/_Edit"
-msgstr "/संसोधन"
-
-msgid "/_File"
-msgstr "/फाईल"
-
-msgid "/_Go"
-msgstr "/जाउ"
-
-msgid "/_Help"
-msgstr "/सहायता"
-
+#: data/ui/yelp.glade.h:2
 msgid "<b>Find text in the document:</b>"
 msgstr "<b>Document मा पाठ्य खोजनुस:</b>"
 
-msgid "Additional documents"
-msgstr "थप documents "
-
-msgid "Applications"
-msgstr "एप्लिकेशन"
-
+#: data/ui/yelp.glade.h:3
 msgid "Automatically _wrap around"
 msgstr "Automatically _wrap around"
 
-msgid "Back"
-msgstr "अघिल्लो"
-
-msgid "Categories"
-msgstr "समुहहरू"
-
-msgid "Configuration Files"
-msgstr "Configuration फाईल"
-
-msgid "Could not activate Yelp: '%s'"
-msgstr "Yelp खोल्न सकिएन: '%s'"
-
-msgid "Could not open new window."
-msgstr "नयां Window खोल्न सकिएन"
-
-msgid "Development"
-msgstr "बिकास"
-
-msgid "Documents"
-msgstr "Documents"
-
+#: data/ui/yelp.glade.h:4
 msgid "Find text..."
 msgstr "पाठ्य खोजनुस..."
 
-msgid "Forward"
-msgstr "पछिल्लो"
-
-msgid "Free Software"
-msgstr "निःशुल्क Software"
-
-msgid "GNOME - Desktop"
-msgstr "GNOME - Desktop"
-
-msgid "GNOME is"
-msgstr "GNOME is"
-
-msgid "Games"
-msgstr "खेलहरू"
-
-msgid "Get help with GNOME"
-msgstr "GNOME को सहयोग लिनुस"
-
-msgid "Go to home view"
-msgstr "मुख्य पृष्ठमा जानुस"
-
-msgid "Hardware Devices"
-msgstr "Hardware Devices"
-
-msgid "Help"
-msgstr "सहायता"
-
-msgid "Help Browser"
-msgstr "Help Browser"
-
-msgid "Help Browser for GNOME 2.0"
-msgstr "Help Browser for GNOME 2.0"
-
-msgid "Help Contents"
-msgstr "सहायताको बिषय सुची"
-
-msgid "Home"
-msgstr "मुख्य पृष्ठ"
-
-msgid "Index"
-msgstr "सुचीपत्र"
-
-msgid "Info Pages"
-msgstr "सुचक पृष्ठ"
-
-msgid "Kernel Routines"
-msgstr "Rutinas del núcleo"
-
-msgid "Library Functions"
-msgstr "Biblioteca de funciones"
-
-msgid "Loading..."
-msgstr "Loading..."
-
-msgid "Manual Pages"
-msgstr "Manual पृष्ठहरू"
-
-msgid "Manual pages"
-msgstr "Manual पृष्ठहरू"
-
+#: data/ui/yelp.glade.h:5
 msgid "Match _entire word"
 msgstr "पुरै शब्द मिलाउ"
 
-msgid "OpenSSL"
-msgstr "OpenSSL"
-
-msgid "Overviews"
-msgstr "Overviews"
-
-msgid "PThreads"
-msgstr "PThreads"
-
-msgid "Perl"
-msgstr "Perl"
-
-msgid "Qt"
-msgstr "Qt"
-
-msgid "Search in the index"
-msgstr "सुचीपत्रमा खोज"
-
-msgid "Section"
-msgstr "शाखा"
-
-msgid "Show next page in history"
-msgstr "इतिहासको अर्को पृष्ठ देखाउ"
-
-msgid "Show previous page in history"
-msgstr "इतिहासको अघिल्लो पृष्ठ देखाउ"
-
-msgid "System Administration"
-msgstr "System Administration"
-
-msgid "System Calls"
-msgstr "System Calls"
-
-msgid "TIFF"
-msgstr "TIFF"
-
-msgid "Termcap"
-msgstr "Termcap"
-
-msgid "The document '%s' does not exist"
-msgstr "El documento «%s» no existe"
-
-msgid "X11"
-msgstr "X11"
-
-msgid "Yelp"
-msgstr "Yelp"
-
-msgid "Yelp Factory"
-msgstr "Yelp Factory"
-
+#: data/ui/yelp.glade.h:6
 msgid "_Match upper/lower case"
 msgstr "_Distinguir entre mayúsculas y minúsculas"
 
+#: data/ui/yelp.glade.h:7
 msgid "_Next"
 msgstr "पछिल्लो"
 
+#: data/ui/yelp.glade.h:8
 msgid "_Previous"
 msgstr "अघिल्लो"
 
+#: src/GNOME_Yelp.server.in.h:1
+msgid "Yelp"
+msgstr "Yelp"
+
+#: src/GNOME_Yelp.server.in.h:2
+msgid "Yelp Factory"
+msgstr "Yelp Factory"
+
+#: src/yelp-main.c:94
+msgid "Define which cache directory to use"
+msgstr ""
+
+#: src/yelp-main.c:128
+#, c-format
+msgid "Could not activate Yelp: '%s'"
+msgstr "Yelp खोल्न सकिएन: '%s'"
+
+#: src/yelp-main.c:147
+msgid "Could not open new window."
+msgstr "नयां Window खोल्न सकिएन"
+
+#: src/yelp-man.c:296 src/yelp-man.c:317 src/yelp-man.c:353 src/yelp-man.c:385
+#: src/yelp-man.c:401 src/yelp-man.c:412
+msgid "X11"
+msgstr "X11"
+
+#: src/yelp-man.c:301 src/yelp-man.c:332 src/yelp-man.c:390 src/yelp-man.c:417
+msgid "OpenSSL"
+msgstr "OpenSSL"
+
+#: src/yelp-man.c:306
+msgid "Termcap"
+msgstr "Termcap"
+
+#: src/yelp-man.c:322
+msgid "Perl"
+msgstr "Perl"
+
+#: src/yelp-man.c:327
+msgid "Qt"
+msgstr "Qt"
+
+#: src/yelp-man.c:337
+msgid "TIFF"
+msgstr "TIFF"
+
+#: src/yelp-man.c:342
+msgid "PThreads"
+msgstr "PThreads"
+
+#: src/yelp-man.c:364
+msgid "System Calls"
+msgstr "System Calls"
+
+#: src/yelp-man.c:369
+msgid "Library Functions"
+msgstr "Biblioteca de funciones"
+
+#: src/yelp-man.c:374
+msgid "Kernel Routines"
+msgstr "Rutinas del núcleo"
+
+#: src/yelp-man.c:429
+msgid "Applications"
+msgstr "एप्लिकेशन"
+
+#: src/yelp-man.c:434
+msgid "Development"
+msgstr "बिकास"
+
+#: src/yelp-man.c:439
+msgid "Hardware Devices"
+msgstr "Hardware Devices"
+
+#: src/yelp-man.c:444
+msgid "Configuration Files"
+msgstr "Configuration फाईल"
+
+#: src/yelp-man.c:449
+msgid "Games"
+msgstr "खेलहरू"
+
+#: src/yelp-man.c:454
+msgid "Overviews"
+msgstr "Overviews"
+
+#: src/yelp-man.c:459
+msgid "System Administration"
+msgstr "System Administration"
+
+#: src/yelp-view-content.c:487 src/yelp-view-index.c:423
+msgid "Loading..."
+msgstr "Loading..."
+
+#: src/yelp-view-content.c:528 src/yelp-view-index.c:517
+msgid "Section"
+msgstr "शाखा"
+
+#: src/yelp-view-index.c:480
 msgid "_Search for:"
 msgstr "....लागि खोज:"
 
+#. GList           *seriesids;
+#: src/yelp-view-toc.c:165
+msgid "Help Contents"
+msgstr "सहायताको बिषय सुची"
+
+#: src/yelp-view-toc.c:166
+msgid "GNOME - Desktop"
+msgstr "GNOME - Desktop"
+
+#: src/yelp-view-toc.c:167
+msgid "Additional documents"
+msgstr "थप documents "
+
+#: src/yelp-view-toc.c:168 src/yelp-view-toc.c:492
+msgid "Manual Pages"
+msgstr "Manual पृष्ठहरू"
+
+#: src/yelp-view-toc.c:169 src/yelp-view-toc.c:548
+msgid "Info Pages"
+msgstr "सुचक पृष्ठ"
+
+#: src/yelp-view-toc.c:366 src/yelp-view-toc.c:549 src/yelp-view-toc.c:740
+msgid "Documents"
+msgstr "Documents"
+
+#: src/yelp-view-toc.c:367 src/yelp-view-toc.c:493 src/yelp-view-toc.c:741
+msgid "Categories"
+msgstr "समुहहरू"
+
+#: src/yelp-view-toc.c:447
+msgid "Manual pages"
+msgstr "Manual पृष्ठहरू"
+
+#: src/yelp-view-toc.c:707
+msgid "GNOME is"
+msgstr "GNOME is"
+
+#: src/yelp-view-toc.c:708
+msgid "Free Software"
+msgstr "निःशुल्क Software"
+
+#: src/yelp-view-toc.c:709
+msgid "(C)"
+msgstr "©"
+
+#: src/yelp-window.c:171
+msgid "/_File"
+msgstr "/फाईल"
+
+#: src/yelp-window.c:172
+msgid "/File/_New window"
+msgstr "/फाईल/ नयां Window "
+
+#: src/yelp-window.c:173
+msgid "/File/_Close window"
+msgstr "/फाईल/ Window बन्द गर्नुस "
+
+#: src/yelp-window.c:175
+msgid "/_Edit"
+msgstr "/संसोधन"
+
+#: src/yelp-window.c:176
+msgid "/Edit/_Find in page..."
+msgstr "/संसोधन/पृष्ठमा  खोजनुस"
+
+#: src/yelp-window.c:177
+msgid "/Edit/_Find again"
+msgstr "/संसोधन/फेरि खोजनुस"
+
+#: src/yelp-window.c:179
+msgid "/_Go"
+msgstr "/जाउ"
+
+#: src/yelp-window.c:180
+msgid "/Go/_Back"
+msgstr "/जाउ/पहिल्लो"
+
+#: src/yelp-window.c:181
+msgid "/Go/_Forward"
+msgstr "/जाउ/अगाडि"
+
+#: src/yelp-window.c:182
+msgid "/Go/_Home"
+msgstr "/जाउ/मुख्य पृष्ठ"
+
+#: src/yelp-window.c:183
+msgid "/Go/_Index"
+msgstr "/जाउ/Index"
+
+#: src/yelp-window.c:185
+msgid "/_Help"
+msgstr "/सहायता"
+
+#: src/yelp-window.c:186
+msgid "/Help/_About"
+msgstr "/सहायता/बारेमा..."
+
+#: src/yelp-window.c:255 src/yelp-window.c:455
+msgid "Help Browser"
+msgstr "Help Browser"
+
+#: src/yelp-window.c:368
+#, c-format
+msgid "The document '%s' does not exist"
+msgstr "El documento «%s» no existe"
+
+#. Note to translators: put here your name (and address) so it
+#. * will shop up in the "about" box
+#: src/yelp-window.c:694
 msgid "translator_credits"
 msgstr ""
 "Juan Manuel García Molina <juanma_gm@wanadoo.es>\n"
 "Germán Poo Caamaño <gpoo@ubiobio.cl>"
+
+#: src/yelp-window.c:698
+#, fuzzy
+msgid "A Help Browser for GNOME"
+msgstr "Help Browser for GNOME 2.0"
+
+#: src/yelp-window.c:812
+msgid "Back"
+msgstr "अघिल्लो"
+
+#: src/yelp-window.c:813
+msgid "Show previous page in history"
+msgstr "इतिहासको अघिल्लो पृष्ठ देखाउ"
+
+#: src/yelp-window.c:824
+msgid "Forward"
+msgstr "पछिल्लो"
+
+#: src/yelp-window.c:825
+msgid "Show next page in history"
+msgstr "इतिहासको अर्को पृष्ठ देखाउ"
+
+#: src/yelp-window.c:838
+msgid "Home"
+msgstr "मुख्य पृष्ठ"
+
+#: src/yelp-window.c:839
+msgid "Go to home view"
+msgstr "मुख्य पृष्ठमा जानुस"
+
+#: src/yelp-window.c:849
+msgid "Index"
+msgstr "सुचीपत्र"
+
+#: src/yelp-window.c:850
+msgid "Search in the index"
+msgstr "सुचीपत्रमा खोज"
+
+#: yelp.desktop.in.h:1
+msgid "Get help with GNOME"
+msgstr "GNOME को सहयोग लिनुस"
+
+#: yelp.desktop.in.h:2
+msgid "Help"
+msgstr "सहायता"
