--- a/po/it.po
+++ b/po/it.po
@@ -5,14 +5,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2003-08-29 12:00+0200\n"
+"POT-Creation-Date: 2003-09-01 16:45-0500\n"
 "PO-Revision-Date: 2003-08-29 12:01+0200\n"
 "Last-Translator: Psyk[o] <shaihulud@supereva.it>\n"
 "Language-Team: Italian <tp@lists.linux.it>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Report-Msgid-Bugs-To: \n"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
