--- a/po/sl.po
+++ b/po/sl.po
@@ -5,14 +5,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Yelp\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2003-08-23 13:14+0200\n"
+"POT-Creation-Date: 2003-09-01 16:45-0500\n"
 "PO-Revision-Date: 2003-08-23 14:40+0200\n"
 "Last-Translator: Andraz Tori <andraz.tori1@guest.arnes.si>\n"
 "Language-Team: Slovenian <sl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit"
+"Content-Transfer-Encoding: 8bit\n"
+"Report-Msgid-Bugs-To: \n"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -258,7 +258,9 @@ msgstr "Dokument '%s' ne obstaja"
 #. * will shop up in the "about" box
 #: src/yelp-window.c:694
 msgid "translator_credits"
-msgstr "Andraž Tori <andraz.tori1@guest.arnes.si>\nTilen Travnik <tilen.travnik@guest.arnes.si>"
+msgstr ""
+"Andraž Tori <andraz.tori1@guest.arnes.si>\n"
+"Tilen Travnik <tilen.travnik@guest.arnes.si>"
 
 #: src/yelp-window.c:698
 msgid "A Help Browser for GNOME"
