--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-09-03  Changwoo Ryu  <cwryu@debian.org>
+
+	* ko.po: Updated Korean translation.
+
 2003-08-29  Alessio Frusciante  <algol@firenze.linux.it>
 
 	* it.po: Updated Italian translation.
